--- a/src/index.scss
+++ b/src/index.scss
@@ -1,5 +1,6 @@
 @import 'components/header/header';
 @import 'components/navbar/navbar';
+@import 'components/footer/footer';
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
