--- a/src/index.css
+++ b/src/index.css
@@ -234,6 +234,26 @@ div#button-konfirmasi #btn-konfirmasi-zakat {
   width: fit-content;
 }
 
+#featured_title_div {
+  width: -webkit-fill-available;
+  margin-top: 25px;
+  margin-bottom: 20px;
+}
+
+#featured_title_div h1#featured-title {
+  text-align: center;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
+}
+
+#profile_big_image {
+  width: -webkit-fill-available;
+}
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue", sans-serif;
