--- a/src/index.scss
+++ b/src/index.scss
@@ -1,6 +1,10 @@
 @import 'components/header/header';
 @import 'components/navbar/navbar';
 @import 'components/footer/footer';
+@import 'page/home/featured/featured';
+@import 'page/profile/profile';
+
+
 body {
     margin: 0;
     font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
